[FFP-103] Fix for infoCol allignment on mobiles

--- a/legacybuild/serviceBanner/serviceBanner.css
+++ b/legacybuild/serviceBanner/serviceBanner.css
@@ -68,6 +68,8 @@
   .ServiceBanner_infoCol__3kDje {
     -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     -ms-flex-pack: center;
     justify-content: center;
     -ms-flex-align: center;
